--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "grunt-contrib-pug": "^1.0.0",
     "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
+    "grunt-sass": "^3.0.2",
     "gulp": "^3.9.1",
     "gulp-bump": "^2.7.0",
     "gulp-notify": "^3.0.0",
@@ -38,6 +39,7 @@
     "gulp-uglify": "^3.0.0",
     "inquirer": "^3.1.0",
     "minifyify": "^7.3.5",
+    "node-sass": "^4.12.0",
     "promise": "^7.1.1",
     "run-sequence": "^1.2.2",
     "vinyl-buffer": "^1.0.0",
