--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "minifyify": "^7.3.5",
     "node-sass": "^4.12.0",
     "promise": "^7.1.1",
+    "puppeteer": "^1.19.0",
+    "rimraf": "^2.6.3",
     "run-sequence": "^1.2.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
